[gd_scene load_steps=5 format=3 uid="uid://dtvo1vuffr04r"]

[ext_resource type="Script" path="res://Code/main.gd" id="1_6cbpn"]
[ext_resource type="AudioStream" uid="uid://b2gsxxijua3nr" path="res://Music/InkBD-song-1.wav" id="2_8mwsc"]
[ext_resource type="Script" path="res://Code/music_manager.gd" id="2_8no3w"]
[ext_resource type="AudioStream" uid="uid://bdnxi6hsbvtcc" path="res://Music/Kapy-song-1.wav" id="4_0jrw2"]

[node name="main_area" type="Node2D"]
script = ExtResource("1_6cbpn")

[node name="Cameras" type="Node" parent="."]

[node name="windows" type="Camera2D" parent="Cameras"]
position = Vector2(648, 308)

[node name="add_full" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 230.0
offset_top = -19.0
offset_right = 270.0
offset_bottom = 4.0

[node name="cash" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 241.0
offset_top = 18.0
offset_right = 353.0
offset_bottom = 54.0

[node name="Tiers" type="Node" parent="."]

[node name="tier1" type="Button" parent="Tiers"]
offset_left = 129.0
offset_top = 88.0
offset_right = 480.0
offset_bottom = 165.0

[node name="buy_tier_1" type="Label" parent="Tiers/tier1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_1" type="Label" parent="Tiers/tier1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_1" type="Label" parent="Tiers/tier1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_1" type="Label" parent="Tiers/tier1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier2" type="Button" parent="Tiers"]
offset_left = 129.0
offset_top = 174.0
offset_right = 481.0
offset_bottom = 243.0

[node name="buy_tier_2" type="Label" parent="Tiers/tier2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_2" type="Label" parent="Tiers/tier2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_2" type="Label" parent="Tiers/tier2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_2" type="Label" parent="Tiers/tier2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier3" type="Button" parent="Tiers"]
visible = false
offset_left = 129.0
offset_top = 252.0
offset_right = 480.0
offset_bottom = 329.0

[node name="buy_tier_3" type="Label" parent="Tiers/tier3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_3" type="Label" parent="Tiers/tier3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_3" type="Label" parent="Tiers/tier3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_3" type="Label" parent="Tiers/tier3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier4" type="Button" parent="Tiers"]
visible = false
offset_left = 129.0
offset_top = 338.0
offset_right = 480.0
offset_bottom = 415.0

[node name="buy_tier_4" type="Label" parent="Tiers/tier4"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_4" type="Label" parent="Tiers/tier4"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_4" type="Label" parent="Tiers/tier4"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_4" type="Label" parent="Tiers/tier4"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier5" type="Button" parent="Tiers"]
visible = false
offset_left = 129.0
offset_top = 423.0
offset_right = 480.0
offset_bottom = 500.0

[node name="buy_tier_5" type="Label" parent="Tiers/tier5"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_5" type="Label" parent="Tiers/tier5"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_5" type="Label" parent="Tiers/tier5"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_5" type="Label" parent="Tiers/tier5"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier6" type="Button" parent="Tiers"]
visible = false
offset_left = 129.0
offset_top = 508.0
offset_right = 480.0
offset_bottom = 585.0

[node name="buy_tier_6" type="Label" parent="Tiers/tier6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_6" type="Label" parent="Tiers/tier6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_6" type="Label" parent="Tiers/tier6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_6" type="Label" parent="Tiers/tier6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="tier7" type="Button" parent="Tiers"]
visible = false
offset_left = 129.0
offset_top = 598.0
offset_right = 481.0
offset_bottom = 675.0

[node name="buy_tier_7" type="Label" parent="Tiers/tier7"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 10.0
offset_right = 255.0
offset_bottom = 33.0

[node name="add_tier_7" type="Label" parent="Tiers/tier7"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 39.0
offset_top = 9.0
offset_right = 79.0
offset_bottom = 32.0

[node name="amount_tier_7" type="Label" parent="Tiers/tier7"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 95.0
offset_bottom = 68.0

[node name="needed_for_boost_tier_7" type="Label" parent="Tiers/tier7"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.0
offset_top = 46.0
offset_right = 211.0
offset_bottom = 69.0

[node name="Timers" type="Node" parent="."]

[node name="click_boost_timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="save_text_timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="Boosters" type="Node" parent="."]

[node name="Click" type="Node" parent="Boosters"]

[node name="click_boost" type="Button" parent="Boosters/Click"]
offset_left = 528.0
offset_top = 34.0
offset_right = 685.0
offset_bottom = 65.0
metadata/_edit_use_anchors_ = true

[node name="clicks" type="Label" parent="Boosters/Click/click_boost"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 3.0
offset_right = 55.0
offset_bottom = 26.0

[node name="click_boost_description" type="Label" parent="Boosters/Click/click_boost"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 42.0
offset_right = 292.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 11
text = "Multiplies total gain  (from all tiers) 
by 1.0 + (number on click boost /10.0)."
clip_text = true

[node name="click_boost_description_background" type="ColorRect" parent="Boosters/Click/click_boost/click_boost_description"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -16.0
offset_top = -6.0
offset_right = 200.0
offset_bottom = 34.0
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="click_boost_more_clicks" type="Button" parent="Boosters/Click"]
anchors_preset = -1
anchor_right = 0.0567708
offset_left = 558.0
offset_top = 172.0
offset_right = 749.0
offset_bottom = 219.0
metadata/_edit_use_anchors_ = true

[node name="more_clicks_text" type="Label" parent="Boosters/Click/click_boost_more_clicks"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="click_boost_more_time" type="Button" parent="Boosters/Click"]
anchors_preset = -1
anchor_right = 0.0630208
offset_left = 555.0
offset_top = 117.0
offset_right = 736.0
offset_bottom = 164.0
metadata/_edit_use_anchors_ = true

[node name="more_time_text" type="Label" parent="Boosters/Click/click_boost_more_time"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Reset" type="Node" parent="Boosters"]

[node name="reset" type="Button" parent="Boosters/Reset"]
offset_left = 525.0
offset_top = 232.0
offset_right = 878.0
offset_bottom = 298.0

[node name="count" type="Label" parent="Boosters/Reset/reset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 22.0

[node name="requirements" type="Label" parent="Boosters/Reset/reset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 110.0
offset_top = 1.0
offset_right = 182.0
offset_bottom = 24.0

[node name="multiplier" type="Label" parent="Boosters/Reset/reset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 22.0
offset_right = 45.0
offset_bottom = 45.0

[node name="needed_for_another_tier" type="Label" parent="Boosters/Reset/reset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 42.0
offset_right = 45.0
offset_bottom = 65.0

[node name="reset_description" type="Label" parent="Boosters/Reset/reset"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 100.0
offset_right = 297.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 11
text = "Multiplies gain from all tiers separately 
by producton * (multiplier ^ amount)  
and resets evrything."
clip_text = true

[node name="reset_description_background" type="ColorRect" parent="Boosters/Reset/reset/reset_description"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -16.0
offset_top = -6.0
offset_right = 210.0
offset_bottom = 55.0
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="Music" type="Node" parent="."]
script = ExtResource("2_8no3w")

[node name="Music menu" type="Node" parent="Music"]

[node name="music_menu_button" type="Button" parent="Music/Music menu"]
offset_left = 1210.0
offset_top = 34.0
offset_right = 1297.0
offset_bottom = 65.0
text = "Music"

[node name="change_music_button" type="Button" parent="Music/Music menu"]
unique_name_in_owner = true
visible = false
offset_left = 1196.0
offset_top = 74.0
offset_right = 1312.0
offset_bottom = 105.0
text = "Change music
"

[node name="disable_music_button" type="Button" parent="Music/Music menu"]
unique_name_in_owner = true
visible = false
offset_left = 1196.0
offset_top = 113.0
offset_right = 1312.0
offset_bottom = 144.0
text = "Disable music"

[node name="now_playing" type="Label" parent="Music/Music menu"]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.021
offset_left = 1162.0
offset_top = 6.0
offset_right = 1161.68
offset_bottom = 6.32

[node name="Players" type="Node" parent="Music"]

[node name="gs1" type="AudioStreamPlayer" parent="Music/Players"]
unique_name_in_owner = true
stream = ExtResource("2_8mwsc")

[node name="gs2" type="AudioStreamPlayer" parent="Music/Players"]
unique_name_in_owner = true
stream = ExtResource("4_0jrw2")

[node name="gs3" type="AudioStreamPlayer" parent="Music/Players"]
unique_name_in_owner = true
stream = ExtResource("4_0jrw2")

[node name="volume_slider" type="HSlider" parent="Music"]
offset_left = 1332.0
offset_top = 39.0
offset_right = 1531.0
offset_bottom = 55.0
min_value = -30.0
max_value = 0.0

[node name="Menu" type="Node" parent="."]

[node name="menu" type="Button" parent="Menu"]
offset_left = 1046.0
offset_top = 34.0
offset_right = 1141.0
offset_bottom = 65.0
text = "Menu"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="Menu"]
visible = false
offset_left = 1041.0
offset_top = 271.0
offset_right = 1159.0
offset_bottom = 314.0
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Save buttons" type="Node" parent="Menu"]

[node name="save_button" type="Button" parent="Menu/Save buttons"]
visible = false
offset_left = 1045.0
offset_top = 92.0
offset_right = 1150.0
offset_bottom = 123.0
text = "Save"
metadata/_edit_use_anchors_ = true

[node name="save_text" type="Label" parent="Menu/Save buttons/save_button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 25.0
metadata/_edit_use_anchors_ = true

[node name="load_button" type="Button" parent="Menu/Save buttons"]
visible = false
offset_left = 1047.0
offset_top = 138.0
offset_right = 1152.0
offset_bottom = 169.0
text = "Load"
metadata/_edit_use_anchors_ = true

[node name="load_text" type="Label" parent="Menu/Save buttons/load_button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 123.0
offset_top = 4.0
offset_right = 235.0
offset_bottom = 27.0
metadata/_edit_use_anchors_ = true

[node name="delete_button" type="Button" parent="Menu/Save buttons"]
visible = false
offset_left = 1045.0
offset_top = 185.0
offset_right = 1152.0
offset_bottom = 216.0
text = "Delete data"
metadata/_edit_use_anchors_ = true

[node name="delete_text" type="Label" parent="Menu/Save buttons/delete_button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 121.0
offset_top = 5.0
offset_right = 182.0
offset_bottom = 28.0
metadata/_edit_use_anchors_ = true

[node name="reset_button" type="Button" parent="Menu/Save buttons"]
visible = false
offset_left = 1046.0
offset_top = 223.0
offset_right = 1146.0
offset_bottom = 254.0
text = "Reset data"
metadata/_edit_use_anchors_ = true

[node name="reset_text" type="Label" parent="Menu/Save buttons/reset_button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 117.0
offset_top = 4.0
offset_right = 164.0
offset_bottom = 27.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Tiers/tier1" to="." method="_on_tier_1_pressed"]
[connection signal="pressed" from="Tiers/tier2" to="." method="_on_tier_2_pressed"]
[connection signal="pressed" from="Tiers/tier3" to="." method="_on_tier_3_pressed"]
[connection signal="pressed" from="Tiers/tier4" to="." method="_on_tier_4_pressed"]
[connection signal="pressed" from="Tiers/tier5" to="." method="_on_tier_5_pressed"]
[connection signal="pressed" from="Tiers/tier6" to="." method="_on_tier_6_pressed"]
[connection signal="pressed" from="Tiers/tier7" to="." method="_on_tier_7_pressed"]
[connection signal="timeout" from="Timers/save_text_timer" to="." method="_on_save_text_timer_timeout"]
[connection signal="mouse_entered" from="Boosters/Click/click_boost" to="." method="_on_click_boost_mouse_entered"]
[connection signal="mouse_exited" from="Boosters/Click/click_boost" to="." method="_on_click_boost_mouse_exited"]
[connection signal="pressed" from="Boosters/Click/click_boost" to="." method="_on_click_boost_pressed"]
[connection signal="pressed" from="Boosters/Click/click_boost_more_clicks" to="." method="_on_click_boost_more_clicks_pressed"]
[connection signal="pressed" from="Boosters/Click/click_boost_more_time" to="." method="_on_click_boost_more_time_pressed"]
[connection signal="mouse_entered" from="Boosters/Reset/reset" to="." method="_on_reset_mouse_entered"]
[connection signal="mouse_exited" from="Boosters/Reset/reset" to="." method="_on_reset_mouse_exited"]
[connection signal="pressed" from="Boosters/Reset/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Music/Music menu/music_menu_button" to="Music" method="_on_music_menu_button_pressed"]
[connection signal="pressed" from="Music/Music menu/change_music_button" to="Music" method="_on_change_music_button_pressed"]
[connection signal="pressed" from="Music/Music menu/disable_music_button" to="Music" method="_on_disable_music_pressed"]
[connection signal="changed" from="Music/volume_slider" to="Music" method="_on_volume_slider_changed"]
[connection signal="value_changed" from="Music/volume_slider" to="Music" method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Menu/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Menu/Save buttons/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Menu/Save buttons/load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Menu/Save buttons/delete_button" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Menu/Save buttons/reset_button" to="." method="_on_reset_button_pressed"]
